clang/test/BSC/Negative/Ownership/Borrow/safeexpr_move_through_borrow/safeexpr_move_through_borrow.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

// Regression: a SafeExpr wrapper (`_Safe(...)` / `_Unsafe(...)`) must not
// hide a move-through-borrow from `Sema::CheckMoveVarMemoryLeak`. Before
// the fix, the SafeExpr at the top of the AST survived `IgnoreParenCasts`
// and the MemberExpr/UnaryOperator arms of the predicate didn't fire,
// silently accepting a move that produces a runtime double-free.
// Umbrella issue: IJP3AP (F62).

struct S { int *_Owned f; };

int * _Owned take_unsafe(struct S * _Borrow s) {
    return _Unsafe(s->f);  // expected-error {{_Borrow type does not allow move ownership}}
}

int * _Owned take_safe(struct S * _Borrow s) {
    return _Safe(s->f);    // expected-error {{_Borrow type does not allow move ownership}}
}

int * _Owned take_paren(struct S * _Borrow s) {
    return _Unsafe(((s))->f);  // expected-error {{_Borrow type does not allow move ownership}}
}

int * _Owned take_double_wrap(struct S * _Borrow s) {
    return _Unsafe(_Safe(s->f));  // expected-error {{_Borrow type does not allow move ownership}}
}

int * _Owned take_deref_borrow(int * _Owned * _Borrow pp) {
    return _Unsafe(*pp);   // expected-error {{_Borrow type does not allow move ownership}}
}
